--- a/src/scss/defaults.scss
+++ b/src/scss/defaults.scss
@@ -25,3 +25,6 @@ i.la-bars {
   background-color: #fff;
   box-shadow: 0 0 30px rgba($color: #000, $alpha: 0.5);
 }
+a {
+  text-decoration: none;
+}
