--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -7,7 +7,7 @@
 }
 
 .footer img {
-  height: 100px;
+  height: 80px;
 }
 
 .footer .menu {
@@ -18,4 +18,16 @@
 .footer .menu li a {
   border-radius: $radius;
   margin-right: 15px;
+  font-size: 14px;
+}
+
+.footer-logo-container {
+  display: flex;
+  justify-content: center;
+}
+
+.footer .copyright {
+  text-align: center;
+  font-size: 12px;
+  color: #555;
 }
