--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -8,4 +8,5 @@
 @import "../../node_modules/bootstrap/scss/bootstrap-grid.scss";
 @import "button.scss";
 @import "mixins.scss";
+@import "./post.scss";
 @import url('https://fonts.googleapis.com/css2?family=Epilogue:wght@100;400;700;800;900&display=swap');
